Added Course to Instructor Database

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -34,7 +34,8 @@ body {
 }
 
 .frosty {
-  background: rgba(0, 0, 0, 0.5);
+/*  background: rgba(0, 0, 0, 0.5); */
+  background:transparent;
   color: white;
 }
 
