--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Flixster</title>
+    <title>Savings App</title>
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -16,7 +16,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
  <!--     <a class="navbar-brand" href="#">Flixster</a>  -->
-      <%= link_to 'Flixter', root_path, class: 'navbar-brand' %>
+      <%= link_to 'Savings App', root_path, class: 'navbar-brand' %>
        
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-md-0">
