--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,14 +1,15 @@
 <div class="hero">
   <br />
   <div class="frosty col-10 offset-1 text-center">
-    <br />
-    <h1>Learn Magic from the Pros</h1>
-    <br />
-    <h2>I'm an illusionist, Michael.</h2>
+    <h1>Learn How to Save</h1>
+    <h2>From a "Budgetnista"</h2>
     <br />
     <%= link_to 'Learn More', courses_path, class: 'btn btn-success' %>
     <br /><br />
-    <div class="row feature text-center">
+  </div>
+</div>
+
+  <div class="row feature text-center">
       <div class="col-12 col-sm">
         <h3>Amazing Courses</h3>
         <br />
