--- a/app/views/instructor/courses/new.html.erb
+++ b/app/views/instructor/courses/new.html.erb
@@ -6,7 +6,7 @@
     <%= f.input :description %>
     <%= f.input :cost %>
     <br />
-    <%= f.submit "Add a section...", class: 'btn btn-primary' %>
+    <%= f.submit "Add a course...", class: 'btn btn-primary' %>
     <br >
   <% end %>
   <br />
