--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,6 +1,6 @@
 <br />
 
-<div class="booyah-box" col-10 offset-1">
+<div class="booyah-box col-10 offset-1">
   <h1><%= @course.title %></h1>
   <br />   
   <div class="row">
@@ -9,7 +9,6 @@
         <%= number_to_currency @course.cost %>
       </span>
        
-
       <% if current_user && current_user == @course.user %>
         <br />
         <br />
@@ -26,6 +25,15 @@
     <% @course.sections.each do |section| %>
       <div class="section">
         <%= section.title %>
+        <% section.lessons.each do |lesson| %>
+          <div class="lesson">
+            <%= link_to lesson_path(lesson) do %>
+              <b><%= lesson.title %></b>
+              -
+              <%= lesson.subtitle %>
+            <% end %>
+          </div>
+        <% end %>
       </div>
     <% end %>
   </div>
