--- a/app/views/instructor/courses/new.html.erb
+++ b/app/views/instructor/courses/new.html.erb
@@ -1,12 +1,14 @@
 <br />
+
 <div class="booyah-box col-10 offset-1">
-  <h1>Add a new course</h1>
+  <h1>Add a New Course</h1>
   <%= simple_form_for @course, url: instructor_courses_path do |f| %>
     <%= f.input :title %>
     <%= f.input :description %>
     <%= f.input :cost %>
+    <%= f.input :image %>
     <br />
-    <%= f.submit "Add a course...", class: 'btn btn-primary' %>
+    <%= f.submit "Add a Course...", class: 'btn btn-primary' %>
     <br >
   <% end %>
   <br />
