--- a/app/views/instructor/lessons/new.html.erb
+++ b/app/views/instructor/lessons/new.html.erb
@@ -1,12 +1,14 @@
 <br />
 <div class="booyah-box col-10 offset-1">
-  <h1>Add a new lesson</h1>
+  <h1>Add a New Lesson</h1>
   <%= simple_form_for @lesson, url: instructor_section_lessons_path(current_section) do |f| %>
     <%= f.input :title %>
     <%= f.input :subtitle %>
+    <%= f.input :video %>
     <br />
-    <%= f.submit "Add the lesson", class: 'btn btn-primary' %>
+    <%= f.submit "Add the Lesson", class: 'btn btn-primary' %>
     <br />
     <br />
   <% end %> 
+  <br />
 </div>
