Corrected Typos/Configured Video Uploading Feature

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -4,20 +4,17 @@
   <h1><%= @course.title %></h1>
   <%= image_tag @course.image, class: 'img-fluid' %>
   <br />   
-
-    <br />
-    <div class="row">
-      <div class="col-sm-4 col-12 text-center">
-        <span class="badge badge-default">
-          <%= number_to_currency @course.cost %>
-        </span>
+  <div class="row">
+    <div class="col-sm-4 col-12 text-center">
+      <span class="badge badge-default">
+        <%= number_to_currency @course.cost %>
+      </span>
          
-        <% if current_user && current_user == @course.user %>
-          <br />
-          <br />
-          <%= link_to 'Administer', instructor_course_path(@course), class: 'btn btn-danger btn-large' %>
-        <% end %>
-      </div>
+      <% if current_user && current_user == @course.user %>
+        <br />
+        <br />
+        <%= link_to 'Administer', instructor_course_path(@course), class: 'btn btn-danger btn-large' %>
+      <% end %>
     </div>
       
     <div class="col-sm-8 col-12">
@@ -35,7 +32,7 @@
               <b><%= lesson.title %></b>
               -
               <%= lesson.subtitle %>
-            <% end %>
+            </end>
           </div>
         <% end %>
       </div>
