--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -7,6 +7,7 @@
   <% @courses.each do |course| %>
     <h2 class="text-center"><%= link_to course.title, course_path(course) %></h2>
     <br />
+    <div class="row">
       <div class="col-sm-8 col-12">
         <%= image_tag course.image, class: 'img-fluid' %>
       </div>
@@ -18,6 +19,7 @@
       <div class="col-sm-4 col-12 text-center">
         <%= link_to 'More Details...', course_path(course), class: 'btn btn-primary btn-large' %>
       </div>
+    </div>
     <br class="clr" />
   <% end %>
 </div>
