--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -32,7 +32,7 @@
               <b><%= lesson.title %></b>
               -
               <%= lesson.subtitle %>
-            </end>
+            <% end %>
           </div>
         <% end %>
       </div>
