--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -72,7 +72,25 @@ body {
 h1, h2, h3, h4, h5, h6, .navbar {
   margin: 0;
 }
-~
+
+.lesson {
+  background-color: black;
+  margin-top: 10px;
+  height: 130px;
+}
+
+.lesson a {
+  color: white;
+  font-family: "Helvetica Neue", Helvetica;
+  font-weight: 100;
+  font-size: 15px;
+}
+
+.lesson a b {
+  font-weight: 100;
+  font-size: 25px;
+}
+
 .navbar {
   background: image_url('dark_leather.png');
   box-shadow: 0px 1px 3px #2a2a2a;
@@ -84,4 +102,10 @@ h1, h2, h3, h4, h5, h6, .navbar {
   font-family: 'great_vibesregular', sans-serif;
   font-size: 200%;
   margin-bottom: 0;
+}
+
+.section {
+  border: 1px solid;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  padding: 20px;
 }
