--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -2,8 +2,8 @@
 
 <div class="booyah-box col-10 offset-1">
   <div class="text-center">
-  <h1><%= @course.title %></h1>
-  <%= image_tag @course.image, class: 'img-fluid' %>
+    <h1><%= @course.title %></h1>
+    <%= image_tag @course.image, class: 'img-fluid' %>
   </div>
   <br />   
   <div class="row">
@@ -17,6 +17,16 @@
         <br />
         <%= link_to 'Administer', instructor_course_path(@course), class: 'btn btn-danger btn-large' %>
       <% end %>
+
+      <br />
+      <br />
+
+
+      <% if current_user && current_user.enrolled_in?(@course) %>
+        <h3 class="badge badge-info">You Are Enrolled!</h3>
+      <% else %>
+        <%= link_to 'Enroll', course_enrollments_path(@course), class: 'btn btn-primary', method: :post %>
+      <% end %>
     </div>
 
 <!--  <div class="col-sm-6 col-6 offset-3 text-center"> -->
@@ -28,7 +38,7 @@
 <!--<div class="col-8 offset-2"> -->
   <div class="col-12">
     <% @course.sections.each do |section| %>
-      <br /><br />
+    <br /><br />
       <div class="section">
         <h3><%= section.title %></h3>
         <div class="row">
@@ -49,5 +59,4 @@
       </div>
     <% end %>
   </div>
-
 </div>
