--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,3 +1,19 @@
+<script>
+  $(function() {
+    $('.lessons').sortable({
+      update: function( event, ui ) {
+        $.ajax({
+          type: 'PUT',
+          url: ui.item.data('update-url'),
+          dataType: 'json',
+          data: { lesson: { row_order_position: ui.item.index() } } 
+        });
+      }
+    });
+  });
+</script>
+
+
 <br />
 
 <div class="booyah-box col-10 offset-1">
@@ -5,9 +21,10 @@
     <%= image_tag current_course.image, class: 'img-fluid' %>
   </div>
   <br />
+<!--
   <%= link_to 'Preview As Student...', course_path(current_course), class: 'btn btn-warning float-right' %>
   <br class="clr" />
-
+-->
   <div class="text-center">
     <%= link_to 'Add a new section...', new_instructor_course_section_path(current_course), class: 'btn btn-primary btn-lg' %>
   </div>
@@ -17,9 +34,9 @@
       <li>
         <%= section.title %>
         <%= link_to 'New Lesson...', new_instructor_section_lesson_path(section), class: 'float-right btn btn-primary btn-sm' %>
-        </ul>
+        </ul class="lessons">
           <% section.lessons.rank(:row_order).each do |lesson| %>
-            <li>
+            <li data-update-url="<%= instructor_lesson_path lesson %>">
               <b><%= lesson.title %></b>
               -
               <%= lesson.subtitle %>
