--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,8 +1,17 @@
 @import "bootstrap";
+@import "font-awesome";
 
 body {
   background: image_url('bg.png');
   font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
+}
+
+ul {
+  list-style-type: none;
+}
+
+ul .header .fa {
+  font-size: 20px;
 }
 
 .booyah-box {
@@ -91,6 +100,25 @@ h1, h2, h3, h4, h5, h6, .navbar {
   font-size: 25px;
 }
 
+.lessons li {
+  background: black;
+  color: white;
+  margin: 10px;
+  font-family: "Helvetica Neue", Helvetica;
+  font-weight: 100;
+  padding: 8px;
+  font-size: 15px;
+}
+
+.lessons li b {
+  font-size: 25px;
+  font-weight: 100;
+}
+
+.lessons li p {
+  margin: 0;
+}
+
 .navbar {
   background: image_url('dark_leather.png');
   box-shadow: 0px 1px 3px #2a2a2a;
@@ -104,8 +132,9 @@ h1, h2, h3, h4, h5, h6, .navbar {
   margin-bottom: 0;
 }
 
-.section {
+.section-li {
   border: 1px solid;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   padding: 20px;
+  margin: 20px;
 }
