Added a Teacher Dashboard

--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -40,7 +40,7 @@
   </div>
    
   <ul class="sections">
-    <% current_course.sections.rank(:row_order).each do |section| %>
+    <% current_course.sections.rank(:row_order_position).each do |section| %>
       <li data-update-url="<%= instructor_section_path(section) %>" class="section-li">
         <div class="header float-left">
           <span class="fa fa-ellipsis-v"></span>
