--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -10,6 +10,10 @@ ul {
   list-style-type: none;
 }
 
+ul .header {
+  font-size: 25px;
+}
+
 ul .header .fa {
   font-size: 20px;
 }
@@ -137,4 +141,10 @@ h1, h2, h3, h4, h5, h6, .navbar {
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   padding: 20px;
   margin: 20px;
+}
+
+.section {
+  border: 1px solid;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  padding: 29px;
 }
