--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,14 +1,15 @@
 <br />
 
-
 <div class="booyah-box col-10 offset-1">
   <h1>What I'm Learning</h1>
+  <hr />
   <% current_user.enrolled_courses.each do |course| %>
     <h3 class="text-center">
       <%= link_to course.title, course_path(course) %>
+      <br /><br />
+      <% image_tag course.image, class: 'img-fluid' %>
     </h3>
     <br />
-    <% image_tag course.image, class: 'img-fluid' %>
     <br />
     <div class="row">
       <div class="col-12 col-sm-8">
@@ -21,15 +22,18 @@
     <hr class="col-8 offset-2">
     <br class="clr" />
   <% end %>
-
-
-  <h1>What I'm Teaching</h1>
+</div>
+<br /><br />
+<div class="booyah-box col-10 offset-1">
+  <h1 class="text-center">What I'm Teaching</h1>
+  <hr />
   <% current_user.courses.each do |course| %>
     <h3 class="text-center">
       <%= link_to course.title, course_path(course) %>
+      <br /><br />
+      <%= image_tag course.image, class: 'img-fluid' %>
     </h3>
     <br />
-    <%= image_tag course.image, class: 'img-fluid' %>
     <br />
     <div class="row">
       <div class="col-12 col-sm-8">
