--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -5,7 +5,6 @@
       $('#newLessonForm').attr('action', lessonUrl);
     });
 
-
     $('.lessons').sortable({
       update: function( event, ui ) {
         $.ajax({
@@ -27,44 +26,46 @@
         });
       }
     });
-
-
   });
 </script>
 
 
 <br />
 <div class="booyah-box col-10 offset-1">
-  <h1 class="text-center"><%= current_course.title %></h1>
-  <%= image_tag current_course.image, class: 'img-fluid' %>
-
+  <h1 class="text-center">
+    <%= current_course.title %>
+    <br /><br />
+    <%= if current_course.image.present? %>
+      <%= image_tag current_course.image, class: 'img-fluid', alt:"Responsive image" %>
+    <% end %>
+  </h1>
+  <br /><br />
+  <%= link_to 'Preview As Student...', course_path(current_course), class: 'btn btn-warning float-right' %>
+  <br class="clr" />
 
   <div class="text-center">
-    <!-- Button trigger modal -->
+    <!-- Button trigger modal for section -->
     <button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#newSectionModal">
       Add a new section...  
     </button>
   </div>
    
   <ul class="sections">
-    <% current_course.sections.rank(:row_order_position).each do |section| %>
-      <li data-update-url="<%= instructor_section_path section %>" class="section-li">
+    <% current_course.sections.rank(:row_order).each do |section| %>
+      <li data-update-url="<%= instructor_section_path(section) %>" class="section-li">
         <div class="header float-left">
           <span class="fa fa-ellipsis-v"></span>
           <%= section.title %>
         </div>
-        <!-- Button trigger modal -->
+        <!-- Button trigger modal for lesson -->
         <button type="button" class="btn btn-primary btn-lg float-right new-lesson-button" data-toggle="modal" data-target="#newLessonModal" data-lesson-url="<%= instructor_section_lessons_path(section) %>">
           New Lesson...
         </button>
-
         <br class="clr" />
         <br class="clr" />
-
-
         </ul class="lessons">
           <% section.lessons.rank(:row_order).each do |lesson| %>
-            <li data-update-url="<%= instructor_lesson_path lesson %>">
+            <li data-update-url="<%= instructor_lesson_path(lesson) %>">
               <div class="row">
                 <div class="col-1">
                   <br />
@@ -89,15 +90,15 @@
   </ul> 
 </div>
 
-<!-- Modal -->
+<!-- Modal for Section -->
 <div class="modal fade" id="newSectionModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">x</span>
-        </button>
         <h5 class="modal-title" id="newSectionModalLabel">Add a new section</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
       </div>
       <%= simple_form_for @section, url: instructor_course_sections_path(current_course) do |f| %>
         <div class="modal-body">
@@ -112,15 +113,15 @@
   </div>
 </div>
 
-<!-- Modal -->
+<!-- Modal  for Lesson -->
 <div class="modal fade" id="newLessonModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
+        <h5 class="modal-title" id="newLessonModalLabel">Add a new lesson</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">x</span>
-        </button>
-        <h5 class="modal-title" id="newModalLabel">Add a new lesson</h5>
+          <span aria-hidden="true">&times;</span>
+        </button>        
       </div>
       <%= simple_form_for @lesson, url: "#", html: {id: 'newLessonForm' } do |f| %>
         <div class="modal-body">
