--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,16 +8,17 @@
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
     <link href="http://vjs.zencdn.net/6.6.3/video-js.css" rel="stylesheet">
   </head>
+
   <body>
     <div id="flex-content-container">
       <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
  <!--     <a class="navbar-brand" href="#">Flixster</a>  -->
         <%= link_to 'Savings App', root_path, class: 'navbar-brand' %>
        
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto mt-2 mt-md-0">
             <li class="nav-item">
               <%= link_to 'See All Courses', courses_path, class: 'nav-link' %>
@@ -68,16 +69,16 @@
           <div class="col-12 col-sm-3">
             <b>About</b>
             <br />
-            <%= link_to 'Team', '#' %>
+            <%= link_to 'Team', 'team_path' %>
             <br />
-            <%= link_to 'Careers', '#' %>
+            <%= link_to 'Careers', 'career_path' %>
             <br />
             <%= link_to 'Privacy Policy', 'privacy_path' %>
           </div>
           <div class="col-12 col-sm-3">
             <b>Contact</b>
             <br />
-            <a href="mailto:firehostest.2017@gmail.com">Gillian Newton</a>
+            <a href="mailto:firehosetest.2017@gmail.com">Gillian Newton</a>
             <br />
             123 Sesame Street
             <br />
@@ -94,6 +95,9 @@
               <span class="fa fa-facebook-square fa-2x social-button"></span>
             <% end %>
             <%= link_to 'https://twitter.com/Gillian_LiWIT' do %>
+              <span class="fa fa-twitter-square fa-2x social-button"></span>
+            <% end %>
+            <%= link_to 'https://www.linkedin.com/in/gillian-newton/' do %>
               <span class="fa fa-twitter-square fa-2x social-button"></span>
             <% end %>
           </div>
