--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -8,17 +8,22 @@
   
     <% if current_lesson.next_lesson.present? %>
       <%= link_to lesson_path(current_lesson.next_lesson), class: 'btn btn-default float-right' do %>
-        Next Lesson &nbsp;
+        Next Lesson &nbsp;  
         <span class="fa fa-forword"></span>
       <% end %>
+    <% end %>
+    <br />
+    <br />
+    <%= link_to course_path(current_lesson.section.course), class; 'btn btn-default float-right' do %>
+        Back to Course &nbsp;
+        <span class="fa fa-home"></span>
     <% end %>
 
     <br class="clr" />
     <br />
-
-     
-    <video id="my-video" class="video-js vjs-big-play-centered vjs-fluid" controls preload="auto" width="auto" height="auto"
-    poster="/assets/images/black.jpg" data-setup="{}">
+    
+    <video id="my-video" class="video-js vjs-big-play-centered vjs-fluid" controls preload="auto" width="auto" j\height="auto"
+    poster="<%= image_path('black.jpg') %>" data-setup="{}">
       <source src="<%= current_lesson.video.to_s %>" type='video/mp4'>
       <noscript>
         <p class="vjs-no-js">
