--- a/app/views/static_pages/privacy.html.erb
+++ b/app/views/static_pages/privacy.html.erb
@@ -5,7 +5,19 @@
   <h1>Privacy Policy</h1>
 
 
-  <p>
-   We don't believe in Privacy Policies because YOLO.
+  <p>Effective date: August 05, 2018</p>
+
+
+  <p>Flixster ("us", "we", or "our") operates the https://flixster-gillian.herokuapp.com/ website (the "Service").</p>
+
+  <a href="https://www.freeprivacypolicy.com/privacy/view/11ae6bf892d2985e0768202a33b84f55"></a></p>
+
+  <h2>Contact Us</h2>
+
+  <p>If you have any questions about this Privacy Policy, please contact us:</p>
+
+    <ul>
+      <li>By email: firehosetest.2017@gmail.com</li>
+    </ul>                                   
   </p>
 </div>
