--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -52,7 +52,7 @@
   </div>   
 <!--<div class="col-8 offset-2"> -->
   <div class="col-12">
-    <% @course.sections.rank(:row_order).each do |section| %>
+    <% @course.sections.rank(:row_order_position).each do |section| %>
     <br /><br />
       <div class="section">
         <h3>
