--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -32,20 +32,17 @@
 
 <br />
 <div class="booyah-box col-10 offset-1">
-  <h1 class="text-center">
-    <%= current_course.title %>
-    <br /><br />
-    <%= if current_course.image.present? %>
-      <%= image_tag current_course.image, class: 'img-fluid', alt:"Responsive image" %>
-    <% end %>
-  </h1>
-  <br /><br />
+  <div class="text-center">
+    <h1><%= current_course.title %></h1>
+    <%= image_tag current_course.image, class: 'img-fluid' %>
+  </div>
+  <br />
   <%= link_to 'Preview As Student...', course_path(current_course), class: 'btn btn-warning float-right' %>
   <br class="clr" />
 
   <div class="text-center">
     <!-- Button trigger modal for section -->
-    <button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#newSectionModal">
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#newSectionModal">
       Add a new section...  
     </button>
   </div>
@@ -61,8 +58,10 @@
         <button type="button" class="btn btn-primary btn-lg float-right new-lesson-button" data-toggle="modal" data-target="#newLessonModal" data-lesson-url="<%= instructor_section_lessons_path(section) %>">
           New Lesson...
         </button>
+
         <br class="clr" />
         <br class="clr" />
+
         </ul class="lessons">
           <% section.lessons.rank(:row_order).each do |lesson| %>
             <li data-update-url="<%= instructor_lesson_path(lesson) %>">
@@ -95,10 +94,10 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="newSectionModalLabel">Add a new section</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
+        <h5 class="modal-title" id="newSectionModalLabel">Add a new section</h5>
       </div>
       <%= simple_form_for @section, url: instructor_course_sections_path(current_course) do |f| %>
         <div class="modal-body">
@@ -108,7 +107,7 @@
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           <%= f.submit "Add a section", class: 'btn btn-primary' %>
         </div>
-      <% end %>
+      <% end %> 
     </div>
   </div>
 </div>
@@ -118,10 +117,10 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="newLessonModalLabel">Add a new lesson</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>        
+        <h5 class="modal-title" id="newLessonModalLabel">Add a new lesson</h5>
       </div>
       <%= simple_form_for @lesson, url: "#", html: {id: 'newLessonForm' } do |f| %>
         <div class="modal-body">
@@ -133,7 +132,7 @@
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           <%= f.submit "Add the Lesson", class: 'btn btn-primary' %>
         </div>
-      <% end %> 
+      <% end %>
     </div>
   </div>
 </div>
