--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -22,7 +22,7 @@
     <br class="clr" />
     <br />
     
-    <video id="my-video" class="video-js vjs-big-play-centered vjs-fluid" controls preload="auto" width="auto" j\height="auto"
+    <video id="my-video" class="video-js vjs-big-play-centered vjs-fluid" controls preload="auto" width="auto" height="auto"
     poster="<%= image_path('black.jpg') %>" data-setup="{}">
       <source src="<%= current_lesson.video.to_s %>" type='video/mp4'>
       <noscript>
