--- a/app/views/static_pages/careers.html.erb
+++ b/app/views/static_pages/careers.html.erb
@@ -1,4 +1,5 @@
-<br />
+<html>
+<body><br />
 
 <div class="booyah-box col-10 offset-1">
   <h1>Career Opportunities</h1>
@@ -7,3 +8,6 @@
     Looking forward to the career opportunities after The Firehose Project
   </p>
 </div>
+
+</body>
+</html>
