--- a/app/views/static_pages/privacy.html.erb
+++ b/app/views/static_pages/privacy.html.erb
@@ -1,4 +1,5 @@
-<br />
+<html>
+<body><br />
 
 
 <div class="booyah-box col-offset-1">
@@ -10,14 +11,18 @@
 
   <p>Flixster ("us", "we", or "our") operates the https://flixster-gillian.herokuapp.com/ website (the "Service").</p>
 
-  <a href="https://www.freeprivacypolicy.com/privacy/view/11ae6bf892d2985e0768202a33b84f55"></a></p>
+  <a href="https://www.freeprivacypolicy.com/privacy/view/11ae6bf892d2985e0768202a33b84f55">
+     Click Here to View Policy</a></p>
 
   <h2>Contact Us</h2>
 
   <p>If you have any questions about this Privacy Policy, please contact us:</p>
 
     <ul>
-      <li>By email: firehosetest.2017@gmail.com</li>
-    </ul>                                   
+      <a href="firehosetest.2017@gmail.com"></a></li>
+    </ul>
   </p>
 </div>
+
+</body>
+</html>
