Tracking down production Error

--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -14,7 +14,7 @@
     <% end %>
     <br />
     <br />
-    <%= link_to course_path(current_lesson.section.course), class; 'btn btn-default float-right' do %>
+    <%= link_to course_path(current_lesson.section.course), class: 'btn btn-default float-right' do %>
         Back to Course &nbsp;
         <span class="fa fa-home"></span>
     <% end %>
